--- a/main.html
+++ b/main.html
@@ -2,5 +2,6 @@
 <head>merge iss56 and ISS55</head>
 <title>MAIN page</title>
 <h1>HELLO WORD!</h1>
-<footer>FOOTER2</footer>
+<footer>FOOTER</footer>
+
 </html>
