--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <html>
 <head>merge iss56 and ISS55</head>
-<title>MAIN page</title>
+<title>MAIN page edit iss 62</title>
 <h1>HELLO WORD!</h1>
 <body>is64</body>
 <footer>FOOTER</footer>
