--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <head>merge iss56 and ISS55</head>
 <title>MAIN page</title>
 <h1>HELLO WORD!</h1>
+<body>is64</body>
 <footer>FOOTER</footer>
 
 </html>
