--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <head>merge iss56 and ISS55</head>
 <title>MAIN page edit iss 62</title>
 <h1>HELLO WORD!</h1>
-<body>is64</body>
+<body>Task_spec</body>
 <footer>FOOTER</footer>
 
 </html>
